tests/neg/polymorphic-erased-functions-used.check
-- Error: tests/neg/polymorphic-erased-functions-used.scala:3:33 -------------------------------------------------------
3 |def t1 = [T] => (erased t: T) => t // error
  |                                 ^
  |                                 parameter t is declared as `erased`, but is in fact used
-- Error: tests/neg/polymorphic-erased-functions-used.scala:4:42 -------------------------------------------------------
4 |def t2 = [T, U] => (t: T, erased u: U) => u // error
  |                                          ^
  |                                          parameter u is declared as `erased`, but is in fact used
